--- a/hacksoflo2022project-frontend/package.json
+++ b/hacksoflo2022project-frontend/package.json
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.8",
+    "axios": "^1.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^8.4.3"
   },
   "devDependencies": {
     "@types/node": "18.8.3",
